<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Others.FeedbackFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPharmacy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp">

                <ImageView
                    android:id="@+id/imageView_arrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    android:onClick="goBack"
                    android:src="@drawable/ic_arrow_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.523" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="55dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="126dp"
                    android:layout_height="126dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <CheckBox
                        android:id="@+id/checkBox_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1"
                        android:text="Błąd" />

                    <CheckBox
                        android:id="@+id/checkBox_idea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pomysł"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"/>

                    <CheckBox
                        android:id="@+id/checkBox_opinion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:text="Opinia" />

                </LinearLayout>


                <EditText
                    android:id="@+id/editText_nameData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/imie"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editText_emailData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_emailData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editText_messageData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editText_messageData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="16dp"

                    android:hint="@string/wiadomosc"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/button_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_send"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginStart="105dp"
                    android:layout_marginLeft="105dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="105dp"
                    android:layout_marginRight="105dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/button_send"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/button_details"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginStart="105dp"
                    android:layout_marginLeft="105dp"
                    android:layout_marginEnd="105dp"
                    android:layout_marginRight="105dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_button"
                    android:enabled="false"
                    android:text="@string/button_details"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.material.chip.ChipGroup>


            </LinearLayout>

        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_baner_feedback" />


    </RelativeLayout>

</FrameLayout>