<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Others.InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPharmacy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp">

                <ImageView
                    android:id="@+id/imageView_arrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo"
                    android:onClick="goBack"
                    android:src="@drawable/ic_arrow_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.523" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Ostatnio dodane"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:orientation="horizontal">


                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="3"
                            android:orientation="horizontal"
                            android:rowCount="1">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_margin="12dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="Zmieniono wygląd\ncałej apliacji"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="12dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:gravity="center"
                                        android:text="Naprawiono obliczenia\ndo spirytusu"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="12dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:gravity="center"
                                        android:text="Poprawiono wydajność\naplikacji"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                        </GridLayout>


                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Kontakt"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:orientation="horizontal">


                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alignmentMode="alignMargins"
                            android:columnCount="3"
                            android:columnOrderPreserved="false"
                            android:orientation="horizontal"
                            android:rowCount="1">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="12dp"
                                android:onClick="openEmail"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:contentDescription="TODO"
                                        android:src="@drawable/ic_email" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:gravity="center"
                                        android:text="j.olszewski05@gmail.com"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="12dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:onClick="openDiscord"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:contentDescription="TODO"
                                        android:src="@drawable/ic_discord_logo" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:gravity="center"
                                        android:text="Napisz do mnie na discord"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_rowWeight="1"
                                android:layout_columnWeight="1"
                                android:layout_margin="12dp"
                                android:onClick="openLinkedin"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="6dp"
                                tools:targetApi="lollipop">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:padding="16dp">

                                    <ImageView
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:contentDescription="TODO"
                                        android:src="@drawable/ic_linkedin" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="12dp"
                                        android:gravity="center"
                                        android:text="Zobacz mój profil\nna linkedin"
                                        android:textColor="#000000"
                                        android:textSize="18sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>


                        </GridLayout>


                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Zgłoszenia"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnCount="1"
                    android:columnOrderPreserved="false"
                    android:orientation="horizontal"
                    android:rowCount="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:onClick="moveToFeedback"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        tools:targetApi="lollipop">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:gravity="center"
                                android:text="Znalazłeś błąd lub chcesz zasugerować zmianę. Kliknij tutaj."
                                android:textColor="#000000"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="Aktualna wersja: 1.0"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_baner_info" />
    </RelativeLayout>

</FrameLayout>